--- a/references.bib
+++ b/references.bib
@@ -515,3 +515,28 @@ pages={671–680} }
   address = {{New York}}
 }
 
+
+@article{koklu2020,
+	title = {Multiclass classification of dry beans using computer vision and machine learning techniques},
+	author = {Koklu, Murat and Ozkan, Ilker Ali},
+	year = {2020},
+	month = {07},
+	date = {2020-07},
+	journal = {Computers and Electronics in Agriculture},
+	pages = {105507},
+	volume = {174},
+	doi = {10.1016/j.compag.2020.105507},
+	url = {http://dx.doi.org/10.1016/j.compag.2020.105507},
+	langid = {en}
+}
+
+@inbook{mingqiang2008,
+	title = {A Survey of Shape Feature Extraction Techniques},
+	author = {Mingqiang, Yang and Kidiyo, Kpalma and Joseph, Ronsin},
+	year = {2008},
+	month = {11},
+	date = {2008-11-01},
+	publisher = {InTech},
+	doi = {10.5772/6237},
+	url = {http://dx.doi.org/10.5772/6237}
+}
