--- a/dimensionality.qmd
+++ b/dimensionality.qmd
@@ -161,3 +161,332 @@ show_variables <-
   bean_rec %>% 
   prep(log_changes = TRUE)
 ```
+
+::: callout-tip
+Używanie `bake()` z recepturą jest bardzo podobne do używania `predict()` z modelem; operacje oszacowane na zbiorze treningowym są stosowane do dowolnych danych, jak dane testowe lub nowe dane w czasie predykcji.
+:::
+
+Na przykład, próbki zbioru walidacyjnego mogą być przetwarzane następująco:
+
+```{r}
+bean_validation <- bean_val$splits %>% pluck(1) %>% assessment()
+bean_val_processed <- bake(bean_rec_trained, new_data = bean_validation)
+```
+
+@fig-dim3 przedstawia histogramy predyktora powierzchni przed i po przygotowaniu receptury.
+
+```{r}
+#| label: fig-dim3
+#| fig-cap: Rozkłady przed i po transformacji
+library(patchwork)
+p1 <- 
+  bean_validation %>% 
+  ggplot(aes(x = area)) + 
+  geom_histogram(bins = 30, color = "white", fill = "blue", alpha = 1/3) + 
+  ggtitle("Original validation set data")
+
+p2 <- 
+  bean_val_processed %>% 
+  ggplot(aes(x = area)) + 
+  geom_histogram(bins = 30, color = "white", fill = "red", alpha = 1/3) + 
+  ggtitle("Processed validation set data")
+
+p1 + p2
+```
+
+Warto tutaj zwrócić uwagę na dwa ważne aspekty `bake().` Po pierwsze, jak wcześniej wspomniano, użycie `prep(recipe, retain = TRUE)` zachowuje istniejącą przetworzoną wersję zbioru treningowego w recepturze.
+Dzięki temu użytkownik może użyć `bake(recipe, new_data = NULL)`, która zwraca ten zestaw danych bez dalszych obliczeń.
+Na przykład:
+
+```{r}
+bake(bean_rec_trained, new_data = NULL) %>% nrow()
+bean_val$splits %>% pluck(1) %>% analysis() %>% nrow()
+```
+
+Jeśli zestaw treningowy nie jest patologicznie duży, użycie `retain` może zaoszczędzić dużo czasu obliczeniowego.
+Po drugie, w wywołaniu można użyć dodatkowych selektorów, aby określić, które kolumny mają zostać zwrócone.
+Domyślnym selektorem jest `everything()`, ale można dokonać bardziej szczegółowych wyborów.
+
+## Ekstrakcja cech
+
+Ponieważ receptury są podstawową opcją w `tidymodels` do redukcji wymiarowości, napiszmy funkcję, która oszacuje transformację i wykreśli wynikowe dane w postaci macierzy wykresów za pośrednictwem pakietu `ggforce`:
+
+```{r}
+library(ggforce)
+plot_validation_results <- function(recipe, dat = assessment(bean_val$splits[[1]])) {
+  recipe %>%
+    # Estimate any additional steps
+    prep() %>%
+    # Process the data (the validation set by default)
+    bake(new_data = dat) %>%
+    # Create the scatterplot matrix
+    ggplot(aes(x = .panel_x, y = .panel_y, color = class, fill = class)) +
+    geom_point(alpha = 0.4, size = 0.5) +
+    geom_autodensity(alpha = .3) +
+    facet_matrix(vars(-class), layer.diag = 2) + 
+    scale_color_brewer(palette = "Dark2") + 
+    scale_fill_brewer(palette = "Dark2")
+}
+```
+
+Funkcji tej użyjemy wielokrotnie do wizualizacji wyników po zastosowaniu różnych metod ekstrakcji cech.
+
+### PCA
+
+PCA jest metodą bez nadzoru, która wykorzystuje liniowe kombinacje predyktorów do określenia nowych cech.
+Cechy te starają się uwzględnić jak najwięcej zmienności w oryginalnych danych.
+Dodajemy `step_pca()` do oryginalnego przepisu i wykorzystujemy naszą funkcję do wizualizacji wyników na zbiorze walidacyjnym na @fig-dim4 za pomocą:
+
+```{r}
+#| label: fig-dim4
+#| fig-cap: Wynik działania PCA dla pierwszych czterech składowych głównych
+bean_rec_trained %>%
+  step_pca(all_numeric_predictors(), num_comp = 4) %>%
+  plot_validation_results() + 
+  ggtitle("Principal Component Analysis")
+```
+
+Widzimy, że pierwsze dwie składowe PC1 i PC2, zwłaszcza gdy są używane razem, skutecznie rozróżniają lub oddzielają klasy.
+To może nas skłonić do oczekiwania, że ogólny problem klasyfikacji tych ziaren nie będzie szczególnie trudny.
+
+Przypomnijmy, że PCA jest metodą bez nadzoru.
+Dla tych danych okazuje się, że składowe PCA, które wyjaśniają największe różnice w predyktorach, są również predyktorami klas.
+Jakie cechy wpływają na wydajność?
+Pakiet `learntidymodels` posiada funkcje, które mogą pomóc w wizualizacji najważniejszych cech dla każdego komponentu.
+Będziemy potrzebowali przygotowanego przepisu; krok PCA jest dodany w poniższym kodzie wraz z wywołaniem `prep()`:
+
+```{r}
+#| label: fig-pca1
+#| fig-cap: Ładunki predyktorów w transformacji PCA
+library(learntidymodels)
+bean_rec_trained %>%
+  step_pca(all_numeric_predictors(), num_comp = 4) %>% 
+  prep() %>% 
+  plot_top_loadings(component_number <= 4, n = 5) + 
+  scale_fill_brewer(palette = "Paired") +
+  ggtitle("Principal Component Analysis")
+```
+
+Najwyższe ładunki są w większości związane z grupą skorelowanych predyktorów pokazanych w lewej górnej części poprzedniego wykresu korelacji: obwód, powierzchnia, długość osi głównej i powierzchnia wypukła.
+Wszystkie one są związane z wielkością fasoli.
+Miary wydłużenia wydają się dominować w drugim komponencie PCA.
+
+### PLS
+
+*Partial Least Squares* jest nadzorowaną wersją PCA.
+Próbuje znaleźć składowe, które jednocześnie maksymalizują zmienność predyktorów, a jednocześnie maksymalizują związek między tymi składowymi a wynikiem.
+@fig-pls1 przedstawia wyniki tej nieco zmodyfikowanej wersji kodu PCA:
+
+```{r}
+#| label: fig-pls1
+#| fig-cap: Oceny składowych PLS dla zbioru walidacyjnego fasoli, pokolorowane według klas
+bean_rec_trained %>%
+  step_pls(all_numeric_predictors(), outcome = "class", num_comp = 4) %>%
+  plot_validation_results() + 
+  ggtitle("Partial Least Squares")
+```
+
+Pierwsze dwie składowe PLS wykreślone na @fig-pls1 są niemal identyczne z pierwszymi dwiema składowymi PCA!
+Pozostałe składowe różnią się nieco od PCA.
+@fig-pls2 wizualizuje ładunki, czyli najwyższe cechy dla każdej składowej.
+
+```{r}
+#| label: fig-pls2
+#| fig-cap: Ładunki predyktorów w transformacji PLS
+bean_rec_trained %>%
+  step_pls(all_numeric_predictors(), outcome = "class", num_comp = 4) %>%
+  prep() %>% 
+  plot_top_loadings(component_number <= 4, n = 5, type = "pls") + 
+  scale_fill_brewer(palette = "Paired") +
+  ggtitle("Partial Least Squares")
+```
+
+### ICA
+
+Metoda składowych niezależnych różni się nieco od PCA tym, że znajduje składowe, które są tak statystycznie niezależne od siebie, jak to tylko możliwe (w przeciwieństwie do bycia nieskorelowanym).
+Można o tym myśleć jako o rozdzielaniu informacji zamiast kompresji informacji jak w przypadku PCA.
+Użyjmy funkcji `step_ica()` do wykonania dekompozycji (patrz rysunku 16.9):
+
+```{r}
+#| label: fig-ica1
+#| fig-cap: Oceny komponentów ICA dla zbioru walidacyjnego fasoli, pokolorowane według klas
+bean_rec_trained %>%
+  step_ica(all_numeric_predictors(), num_comp = 4) %>%
+  plot_validation_results() + 
+  ggtitle("Independent Component Analysis")
+```
+
+Analiza wyników nie wskazuje na wyraźne różnice między klasami w pierwszych kilku komponentach ICA.
+Te niezależne (lub tak niezależne, jak to możliwe) komponenty nie separują typów fasoli.
+
+### UMAP
+
+*Uniform manifold approximation and projection* jest podobna do innej znanej metody t-SNE służącej do nieliniowej redukcji wymiarów.
+W oryginalnej przestrzeni wielowymiarowej UMAP wykorzystuje opartą na odległości metodę najbliższych sąsiadów, aby znaleźć lokalne obszary danych, w których punkty z dużym prawdopodobieństwem są powiązane.
+Relacje między punktami danych są zapisywane jako model grafu skierowanego, gdzie większość punktów nie jest połączona.
+Stąd UMAP tłumaczy punkty w grafie na przestrzeń o zmniejszonym wymiarze.
+Aby to zrobić, algorytm posiada proces optymalizacji, który wykorzystuje entropię krzyżową do mapowania punktów danych do mniejszego zestawu cech, tak aby graf był dobrze przybliżony.
+
+Pakiet `embed` zawiera funkcję krokową dla tej metody, zwizualizowaną na @fig-umap1.
+
+```{r}
+#| cache: true
+#| label: fig-umap1
+#| fig-cap: Oceny komponentów UMAP dla zestawu walidacyjnego fasoli, pokolorowane według klas
+library(embed)
+bean_rec_trained %>%
+  step_umap(all_numeric_predictors(), num_comp = 4) %>%
+  plot_validation_results() +
+  ggtitle("UMAP")
+```
+
+Widać wyraźne przestrzenie pomiędzy skupieniami, choć te dalej mogą być heterogeniczne.
+
+Istnieje też odmiana UMAP nadzorowana, która zamiast używać podobieństwa do określenia skupień w wielowymiarowej przestrzeni, używa etykiet.
+
+```{r}
+#| cache: true
+#| label: fig-umap2
+#| fig-cap: Oceny komponentów UMAP (werjsa nadzorowana) dla zestawu walidacyjnego fasoli, pokolorowane według klas 
+bean_rec_trained %>%
+  step_umap(all_numeric_predictors(), outcome = "class", num_comp = 4) %>%
+  plot_validation_results() +
+  ggtitle("UMAP (supervised)")
+```
+
+UMAP jest wydajną metodą redukcji przestrzeni cech.
+Jednak może być bardzo wrażliwa na dostrajanie parametrów (np. liczba sąsiadów).
+Z tego powodu pomocne byłoby eksperymentowanie z kilkoma parametrami, aby ocenić, jak wiarygodne są wyniki dla tych danych.
+
+## Modelowanie ze wstępną ekstrakcją cech
+
+Zarówno metoda PLS jak i UMAP są warte zbadania w połączeniu z różnymi modelami.
+Zbadajmy wiele różnych modeli z tymi technikami redukcji wymiarowości (wraz z brakiem jakiejkolwiek transformacji): jednowarstwowa sieć neuronowa, *bagged trees*, elastyczna analiza dyskryminacyjna (FDA), naiwny Bayes i regularyzowana analiza dyskryminacyjna (RDA).
+
+Stworzymy serię specyfikacji modeli, a następnie użyjemy zestawu przepływów pracy do dostrojenia modeli w poniższym kodzie.
+Zauważ, że parametry modelu są dostrajane w połączeniu z parametrami receptury (np. rozmiar zredukowanego wymiaru, parametry UMAP).
+
+```{r}
+library(baguette)
+library(discrim)
+
+mlp_spec <-
+  mlp(hidden_units = tune(), penalty = tune(), epochs = tune()) %>%
+  set_engine('nnet') %>%
+  set_mode('classification')
+
+bagging_spec <-
+  bag_tree() %>%
+  set_engine('rpart') %>%
+  set_mode('classification')
+
+fda_spec <-
+  discrim_flexible(
+    prod_degree = tune()
+  ) %>%
+  set_engine('earth')
+
+rda_spec <-
+  discrim_regularized(frac_common_cov = tune(), frac_identity = tune()) %>%
+  set_engine('klaR')
+
+bayes_spec <-
+  naive_Bayes() %>%
+  set_engine('klaR')
+```
+
+Potrzebujemy również receptur dla metod redukcji wymiarowości, które będziemy testować.
+Zacznijmy od bazowego przepisu `bean_rec`, a następnie rozszerzmy go o różne kroki redukcji wymiarowości:
+
+```{r}
+bean_rec <-
+  recipe(class ~ ., data = bean_train) %>%
+  step_zv(all_numeric_predictors()) %>%
+  step_orderNorm(all_numeric_predictors()) %>%
+  step_normalize(all_numeric_predictors())
+
+pls_rec <- 
+  bean_rec %>% 
+  step_pls(all_numeric_predictors(), outcome = "class", num_comp = tune())
+
+umap_rec <-
+  bean_rec %>%
+  step_umap(
+    all_numeric_predictors(),
+    outcome = "class",
+    num_comp = tune(),
+    neighbors = tune(),
+    min_dist = tune()
+  )
+```
+
+Po raz kolejny pakiet `workflowsets` bierze reguły wstępnego przetwarzani oraz modele i krzyżuje je.
+Opcja kontrolna `parallel_over` jest ustawiona tak, aby przetwarzanie równoległe mogło działać jednocześnie w różnych kombinacjach dostrajania parametrów.
+Funkcja `workflow_map()` stosuje przeszukiwanie siatki w celu optymalizacji parametrów modelu/przetwarzania wstępnego (jeśli istnieją) w 10 kombinacjach parametrów.
+Obszar pod krzywą ROC jest szacowany na zbiorze walidacyjnym.
+
+```{r}
+#| eval: false
+ctrl <- control_grid(parallel_over = "resamples")
+
+bean_res <- 
+  workflow_set(
+    preproc = list(basic = class ~., pls = pls_rec, umap = umap_rec), 
+    models = list(bayes = bayes_spec, fda = fda_spec,
+                  rda = rda_spec, bag = bagging_spec,
+                  mlp = mlp_spec)
+  ) %>% 
+  workflow_map(
+    verbose = TRUE,
+    seed = 1603,
+    resamples = bean_val,
+    grid = 10,
+    metrics = metric_set(roc_auc),
+    control = ctrl
+  )
+```
+
+```{r}
+#| label: fig-all-models1
+#| fig-cap: Obszar pod krzywą ROC ze zbioru walidacyjnego
+
+load("models/bean_res.rda")
+autoplot(
+bean_res,
+rank_metric = "roc_auc",  # <- how to order models
+metric = "roc_auc",       # <- which metric to visualize
+select_best = TRUE     # <- one point per workflow
+) +
+geom_text(aes(y = mean - 0.02, label = wflow_id), angle = 90, hjust = 0.1) +
+lims(y = c(0.9, 1))
+```
+
+Możemy uszeregować modele według ich oszacowań obszaru pod krzywą ROC w zbiorze walidacyjnym:
+
+```{r}
+rankings <- 
+  rank_results(bean_res, select_best = TRUE) %>% 
+  mutate(method = map_chr(wflow_id, ~ str_split(.x, "_", simplify = TRUE)[1])) 
+
+tidymodels_prefer()
+filter(rankings, rank <= 5) %>% dplyr::select(rank, mean, model, method)
+```
+
+Z tych wyników jasno wynika, że większość modeli daje bardzo dobre wyniki; niewiele jest tu złych wyborów.
+Dla demonstracji użyjemy modelu RDA z cechami PLS jako modelu końcowego.
+
+```{r}
+rda_res <- 
+  bean_res %>% 
+  extract_workflow("pls_rda") %>% 
+  finalize_workflow(
+    bean_res %>% 
+      extract_workflow_set_result("pls_rda") %>% 
+      select_best(metric = "roc_auc")
+  ) %>% 
+  last_fit(split = bean_split, metrics = metric_set(roc_auc))
+
+rda_wflow_fit <- extract_workflow(rda_res)
+
+collect_metrics(rda_res)
+```
