--- a/references.bib
+++ b/references.bib
@@ -540,3 +540,18 @@ pages={671–680} }
 	doi = {10.5772/6237},
 	url = {http://dx.doi.org/10.5772/6237}
 }
+
+@article{menardi2012,
+	title = {Training and assessing classification rules with imbalanced data},
+	author = {Menardi, Giovanna and Torelli, Nicola},
+	year = {2012},
+	month = {10},
+	date = {2012-10-30},
+	journal = {Data Mining and Knowledge Discovery},
+	pages = {92--122},
+	volume = {28},
+	number = {1},
+	doi = {10.1007/s10618-012-0295-5},
+	url = {http://dx.doi.org/10.1007/s10618-012-0295-5},
+	langid = {en}
+}
