--- a/resampling2.qmd
+++ b/resampling2.qmd
@@ -119,8 +119,8 @@ Brak znaczących różnic w dopasowaniu modelu regresji na obu zbiorach wynika z
 ![](images/chap_38.png){fig-align="center" width="400"}
 :::
 
-Powyższy przykład pokazuje, że ocena modeli na zbiorze uczącym nie jest właściwym podejściem, ponieważ może zwrócić fałszywie optymistyczne dopasowanie.
-A skoro zbiór testowy nie powinien być używany natychmiast, a repredykacja zbioru treningowego jest złym pomysłem, to co należy zrobić?
+Powyższy przykład pokazuje, że ocena modeli na zbiorze uczącym nie jest właściwym podejściem, ponieważ może zwrócić zbyt optymistyczny poziom dopasowania.
+A skoro zbiór testowy nie powinien być używany natychmiast, a predykcja na zbiorze treningowym jest złym pomysłem, to co należy zrobić?
 Rozwiązaniem są metody ponownego próbkowania (ang. *resampling*), takie jak walidacja krzyżowa lub zestawy walidacyjne.
 
 Metody resamplingu są empirycznymi systemami symulacji, które emulują proces używania pewnych danych do modelowania i innych danych do oceny.
@@ -129,14 +129,14 @@ Schemat na @fig-resamp1 ilustruje, jak generalnie działają metody resamplingu.
 
 ![Przykład podziału zbioru danych z wykorzystaniem resamplingu](images/Zrzut%20ekranu%202023-02-20%20o%2019.54.34.png){#fig-resamp1 fig-align="center" width="500"}
 
-Resampling jest przeprowadzany tylko na zbiorze treningowym.
+*Resampling* jest przeprowadzany tylko na zbiorze treningowym.
 Zbiór testowy nie bierze w nim udziału.
 Dla każdej iteracji ponownego próbkowania dane są dzielone na dwie podpróbki, na których:
 
 -   Model jest dopasowywany za pomocą zbioru analitycznego (ang. *analysis set*).
 -   Model jest oceniany za pomocą zbioru do oceny (ang. *assessment set*).
 
-Te dwie podpróbki są w pewnym sensie analogiczne do zestawów treningowych i testowych.
+Te dwie próby danych są w pewnym sensie analogiczne do zestawów treningowych i testowych.
 Używany przez nas język analizy i oceny pozwala uniknąć pomyłek związanych z początkowym podziałem danych.
 Te zbiory danych wzajemnie się wykluczają.
 Schemat podziału stosowany do tworzenia zbiorów analizy i oceny jest zazwyczaj cechą definiującą metodę.
@@ -160,7 +160,7 @@ Liczba wewnątrz symboli to numer próbki.
 
 ![3-krotny sprawdzian krzyżowy](images/Zrzut%20ekranu%202023-02-20%20o%2020.01.18.png){#fig-cross1 fig-align="center" width="400"}
 
-Kolor symboli na @fig-cross1 reprezentuje ich losowo przypisane foldy.
+Kolory symboli na @fig-cross1 reprezentują ich losowo przypisane foldy.
 
 W przypadku trzykrotnej walidacji krzyżowej trzy iteracje próbkowania przedstawiono na @fig-cross2.
 Dla każdej iteracji jeden fold jest zatrzymywany do oceny modelu, a pozostałe foldy są używane do uczenia modelu.
@@ -208,13 +208,13 @@ W przypadku walidacji krzyżowej oznacza to uśrednienie więcej niż $V$ statys
 
 Aby stworzyć $R$ powtórzeń $V$-krotnej walidacji krzyżowej, ten sam proces generowania foldów jest wykonywany $R$ razy, aby wygenerować $R$ zbiorów złożonych z $V$ podzbiorów.
 Zamiast uśredniania $V$ statystyk, $V\times R$ wartości daje ostateczną estymację resamplingu.
-Ze względu na Centralne Twierdzenie Graniczne, statystyki zbiorcze z każdego modelu mają tendencję do rozkładu normalnego, tak długo jak mamy dużo danych w stosunku do $V\times R$.
+
 Rozważmy dane `ames`.
 Średnio, 10-krotna walidacja krzyżowa używa zestawów oceny, które zawierają około 234 obserwacji.
 Jeśli RMSE jest wybraną statystyką, możemy oznaczyć odchylenie standardowe tego oszacowania jako $\sigma$.
 Przy 10-krotnej walidacji krzyżowej błąd standardowy średniej RMSE wynosi $\sigma/\sqrt{10}$.
 Podczas gdy ta wielkość może charakteryzować się jeszcze dużym szumem, powtórzenia zmniejszają błąd standardowy do $\sigma/\sqrt{10R}$.
-Dla 10-krotnej walidacji krzyżowej z $R$ powtórzeniami, wykres na rysunku 10.4 pokazuje, jak szybko błąd standardowy maleje wraz z liczbą powtórzeń.
+Dla 10-krotnej walidacji krzyżowej z $R$ powtórzeniami, wykres na rysunku @fig-cross3 pokazuje, jak szybko błąd standardowy maleje wraz z liczbą powtórzeń.
 
 ![Wielkość błędu standardowego estymacji w zależności od liczby powtórzeń walidacji krzyżowych](images/Zrzut%20ekranu%202023-02-20%20o%2021.09.46.png){#fig-cross3 fig-align="center" width="600"}
 
@@ -235,7 +235,7 @@ Na koniec próbkowania $n$ prognoz jest łączonych w celu uzyskania pojedynczej
 ![](images/chap_41.png){fig-align="center" width="400"}
 :::
 
-Metody LOO są niedoskonałe w porównaniu z prawie każdą inną metodą.
+Metody LOO są gorsza w porównaniu z prawie każdą inną metodą oceny dopasowania.
 Dla wszystkich oprócz patologicznie małych próbek, LOO jest obliczeniowo złożony i może nie mieć dobrych właściwości statystycznych.
 Chociaż pakiet `rsample` zawiera funkcję `loo_cv()`, obiekty te nie są mocno zintegrowane z pakietami `tidymodels`.
 
@@ -264,7 +264,7 @@ Podziału można dokonać też od razu dzieląc cały zbiór danych na trzy czę
 ![Podział na trzy zbiory](images/Zrzut%20ekranu%202023-02-20%20o%2021.32.11.png){#fig-val2 fig-align="center" width="400"}
 
 Zbiory walidacyjne są często wykorzystywane, gdy pierwotna pula danych jest bardzo duża.
-W tym przypadku, pojedyncza duża część może być odpowiednia do scharakteryzowania dopasowania modelu bez konieczności wykonywania wielu iteracji próbkowania.
+W tym przypadku, pojedyncza duża partia danych jest wystarczająca do scharakteryzowania dopasowania modelu bez konieczności wykonywania wielu iteracji próbkowania.
 
 ```{r}
 set.seed(1002)
@@ -281,7 +281,7 @@ Próbka bootstrapowa zbioru treningowego to próbka, która ma ten sam rozmiar c
 Oznacza to, że niektóre obserwacje zbioru treningowego są wielokrotnie wybierane do zbioru analitycznego.
 Każdy punkt danych ma 63,2% szans na włączenie do zbioru uczącego przynajmniej raz.
 Zestaw oceny zawiera wszystkie próbki zestawu treningowego, które nie zostały wybrane do zestawu analitycznego (średnio 36,8% zestawu treningowego).
-Podczas bootstrappingu zestaw oceny jest często nazywany próbką poza workiem (ang. *Out-Of-Bag)*.
+Podczas *bootstrappingu* zestaw oceny jest często nazywany próbką poza workiem (ang. *Out-Of-Bag)*.
 
 Dla zbioru treningowego składającego się z 30 próbek, schemat trzech próbek bootstrapowych przedstawiono na @fig-boot1
 
@@ -291,13 +291,13 @@ Dla zbioru treningowego składającego się z 30 próbek, schemat trzech próbek
 bootstraps(ames_train, times = 5)
 ```
 
-Próbki bootstrapowe dają oszacowania dopasowania, które mają bardzo niską wariancję (w przeciwieństwie do walidacji krzyżowej), ale jest pesymistyczna w ocenie obciążenia.
+Próbki bootstrapowe dają oszacowania dopasowania, które mają bardzo niską wariancję (w przeciwieństwie do walidacji krzyżowej), ale są pesymistyczne w ocenie obciążenia.
 Oznacza to, że jeśli prawdziwa dokładność modelu wynosi 90%, bootstrap będzie miał tendencję do oszacowania wartości mniejszej niż 90%.
 Wielkość błędu systematycznego nie może być określona empirycznie z wystarczającą dokładnością.
-Dodatkowo, wielkość błędu systematycznego zmienia się w zależności od skali w jakiej mierzone jest dopasowanie.
+Dodatkowo, wielkość błędu systematycznego zmienia się w zależności od skali dopasowania.
 Na przykład obciążenie będzie prawdopodobnie inne, gdy dokładność wynosi 90% w porównaniu z 70%.
 
-Bootstrap jest również wykorzystywany wewnątrz wielu modeli.
+*Bootstrap* jest również wykorzystywany wewnątrz wielu modeli.
 Na przykład, wspomniany wcześniej model lasu losowego zawierał 1000 indywidualnych drzew decyzyjnych.
 Każde drzewo było produktem innej próbki bootstrapowej zbioru treningowego.
 
@@ -306,7 +306,7 @@ Każde drzewo było produktem innej próbki bootstrapowej zbioru treningowego.
 Gdy dane mają istotny składnik czasowy (jak np. szeregi czasowe), metoda próbkowania powinna pozwolić na oszacowanie sezonowych i okresowych trendów w szeregach czasowych.
 Technika, która losowo próbkuje wartości ze zbioru treningowego, nie pozwoli na oszacowanie tych wzorców.
 
-Kroczące próbkowanie źródła (ang. *rolling forecast origin resampling*) jest metodą, która emuluje sposób, w jaki dane szeregów czasowych są często partycjonowane w praktyce, szacując model z danymi historycznymi i oceniając go z najnowszymi danymi [@hyndman].
+Kroczące próbkowanie źródła (ang. *rolling forecast origin resampling*) jest metodą, która emuluje sposób, w jaki dane szeregów czasowych są często partycjonowane w praktyce, estymując parametry modelu na danymych historycznych i oceniając go z najnowszymi danymi [@hyndman].
 Dla tego typu resamplingu określa się rozmiar zbiorów analiz i ocen.
 Pierwsza iteracja resamplingu wykorzystuje te rozmiary, zaczynając od początku serii.
 Druga iteracja wykorzystuje te same rozmiary danych, ale przesuwa się o ustaloną liczbę próbek.
@@ -319,16 +319,16 @@ W tej konfiguracji uzyskuje się pięć próbek, jak pokazano na @fig-rolling.
 
 Istnieją dwie różne konfiguracje tej metody:
 
--   Zestaw analiz może narastać narastająco (w przeciwieństwie do utrzymywania tego samego rozmiaru). Po pierwszym początkowym zestawie analitycznym nowe próbki mogą narastać bez odrzucania wcześniejszych danych.
+-   Zestaw analiz może narastać (w przeciwieństwie do utrzymywania tego samego rozmiaru). Po pierwszym początkowym zestawie analitycznym nowe próbki mogą narastać bez odrzucania wcześniejszych danych. W rezultacie oznacza to, że po nauczeniu i ocenie dopasowania modelu na *Resample 1,* model jest uczony na zbiorze rozszerzonym o obserwację 9, czyli na danych od 1 do 9. Następnie oceniany na obserwacjach od 10 do 12, itd.
 -   Próbki nie muszą być zwiększane o jeden. Na przykład, w przypadku dużych zestawów danych, blok przyrostowy może wynosić tydzień lub miesiąc zamiast dnia.
 
 ## Oszacowanie dopasowania z wykorzystaniem resamplingu
 
-Każda z metod resamplingu omówionych w tym rozdziale może być wykorzystana do oceny procesu modelowania (w tym przetwarzania wstępnego, dopasowania modelu itp.).
+Każda z metod *resamplingu* omówionych w tym rozdziale może być wykorzystana do oceny procesu modelowania (w tym przetwarzania wstępnego, dopasowania modelu itp.).
 Metody te są skuteczne, ponieważ do trenowania modelu i oceny modelu wykorzystywane są różne grupy danych.
 Przebiega on w następujący sposób:
 
-1.  Podczas resamplingu zbiór analityczny jest używany do wstępnego przetwarzania danych a następnie przetworzonych danych używa do dopasowania modelu.
+1.  Podczas *resamplingu* zbiór analityczny jest używany do wstępnego przetwarzania danych, a następnie przetworzonych danych używa do dopasowania modelu.
 2.  Statystyki przetwarzania wstępnego opracowane przez zbiór analiz są stosowane do zbioru oceny. Prognozy ze zbioru oceny wskazują wydajność modelu na nowych danych.
 
 Ta sekwencja powtarza się dla każdej próby.
@@ -371,7 +371,7 @@ assess_res
 Kolumna `.row` jest liczbą całkowitą, która odpowiada numerowi wiersza oryginalnego zestawu treningowego, tak aby te wyniki mogły być odpowiednio połączone z oryginalnymi danymi.
 
 ::: callout-tip
-Dla niektórych metod resamplingu, takich jak bootstrap lub walidacja krzyżowa z powtórzeniami, otrzymamy wiele predykcji na wiersz oryginalnego zestawu treningowego.
+Dla niektórych metod resamplingu, takich jak *bootstrap* lub walidacja krzyżowa z powtórzeniami, otrzymamy wiele predykcji na wiersz oryginalnego zestawu treningowego.
 Aby uzyskać jedną statystykę (średnią z predykcji) użyj `collect_predictions(object, summarize = TRUE)`.
 :::
 
@@ -419,10 +419,8 @@ Jak widać wyniki te są zbliżone do otrzymanych z wykorzystaniem próby testow
 
 ## Przetwarzanie równoległe
 
-Modele utworzone podczas ponownego próbkowania są niezależne od siebie.
-Obliczenia tego typu są czasami nazywane żenująco równoległymi (ang. *embarrassingly parallel*); każdy model mógłby być dopasowany jednocześnie bez problemów [@schmidberger2009].
 Pakiet `tune` używa pakietu `foreach` do przeprowadzenia obliczeń równoległych.
-Obliczenia te mogą być podzielone pomiędzy procesory na tym samym komputerze lub na różnych komputerach, w zależności od wybranej technologii.
+Obliczenia te mogą być podzielone pomiędzy rdzenie procesora na tym samym komputerze lub na różnych komputerach, w zależności od wybranej technologii.
 
 Liczbę dostępnych rdzeni można wykryć za pomocą:
 
@@ -436,11 +434,11 @@ parallel::detectCores(logical = FALSE)
 parallel::detectCores(logical = TRUE)
 ```
 
-Różnica między tymi dwoma wartościami jest związana z procesorem komputera.
-Na przykład większość procesorów Intela wykorzystuje hyperthreading[^resampling2-2], który tworzy dwa wirtualne rdzenie dla każdego fizycznego rdzenia.
-Dodatkowe zasoby mogą poprawić wydajność, jednak rzadko można je stosować na wszystkich rdzeniach fizycznych, ponieważ pewne zasoby są potrzebne do obsługi hyperthreadingu.
+Różnica między tymi dwoma wartościami jest związana z typem procesora.
+Na przykład większość procesorów Intela wykorzystuje *hyperthreading*[^resampling2-2], który tworzy dwa wirtualne rdzenie dla każdego fizycznego rdzenia.
+Dodatkowe zasoby mogą poprawić wydajność, jednak rzadko można je stosować na wszystkich rdzeniach fizycznych, ponieważ pewne zasoby są potrzebne do obsługi *hyperthreadingu*.
 
-[^resampling2-2]: wielowątkowość współbierzna
+[^resampling2-2]: wielowątkowość współbieżna
 
 W przypadku `fit_resamples()` i innych funkcji w pakiecie `tune`, przetwarzanie równoległe występuje, gdy użytkownik zarejestruje pakiet równoległego przetwarzania.
 Owe pakiety definiują sposób wykonywania przetwarzania równoległego.
